Go back to use of workspaces

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,15 +8,25 @@ workflows:
   version: 2
   all:
     jobs:
+      - build:
+          filters: # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /.*/
       - junit:
+          requires:
+            - build
           filters: # required since `deploy` has tag filters AND requires `build`
             tags:
               only: /.*/
       - mysql:
+          requires:
+            - build
           filters: # required since `deploy` has tag filters AND requires `build`
             tags:
               only: /.*/
       - integration:
+          requires:
+            - build
           filters: # required since `deploy` has tag filters AND requires `build`
             tags:
               only: /.*/
@@ -32,12 +42,60 @@ workflows:
               ignore: /.*/
 
 jobs:
+  build:
+    docker:
+      - image: circleci/openjdk:8-jdk
+        environment:
+          MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -DskipTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+    working_directory: ~/orko
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - restore_cache:
+          keys:
+            - node-v5-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
+            - node-v5-{{ .Branch }}-
+            - node-v5-
+      - run:
+          name: Build
+          command: mvn ${BUILD_ARGS} -T 1C -Pui,bundle clean install
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+      - save_cache:
+          paths:
+            - ~/usr/local/lib/node_modules
+          key: node-v5-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}}
+      - run:
+          name: Remove unnecessary node artifacts before saving workspace
+          command: |
+            rm -rf orko-ui/node
+            rm -rf orko-ui/node_modules
+      - persist_to_workspace:
+          root: /home/circleci
+          paths:
+            - orko
+      - run:
+          name: Saving checkstyle reports
+          command: |
+            mkdir -p ~/checkstyle/
+            find . -type f -regex ".*/target/checkstyle-result.xml" -exec cp {} ~/checkstyle \;
+          when: always
+      - store_artifacts:
+          path: ~/checkstyle
+
   junit:
     docker:
       - image: circleci/openjdk:8-jdk
         environment:
           MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -U -T 1C -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     working_directory: ~/orko
     steps:
       - checkout
@@ -46,11 +104,8 @@ jobs:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v2-{{ .Branch }}-
             - maven-repo-v2-
-      - restore_cache:
-          keys:
-            - node-v4-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
-            - node-v4-{{ .Branch }}-
-            - node-v4-
+      - attach_workspace:
+          at: /home/circleci
       - run:
           name: Upgrade Maven
           command: |
@@ -64,13 +119,12 @@ jobs:
             if [[ -n "$SONARQUBE_TOKEN" ]]; then
               echo "Build and Sonar"
               export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
-              export SONAR_TARGETS="-Pui,bundle org.jacoco:jacoco-maven-plugin:prepare-agent clean install sonar:sonar"
+              export SONAR_TARGETS="org.jacoco:jacoco-maven-plugin:prepare-agent surefire:test sonar:sonar"
               export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
                   -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
-                  -Dsonar.login=${SONARQUBE_TOKEN} \
-                  -Dskip.failsafe.tests=true"
+                  -Dsonar.login=${SONARQUBE_TOKEN}"
               if [[ -n "$CIRCLE_BRANCH" ]]; then
-                mvn ${BUILD_ARGS} ${SONAR_TARGETS} ${SONAR_ARGS} \
+                mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
                   -Dsonar.branch.name=${CIRCLE_BRANCH}
               else
                 if [[ -n "$CIRCLE_PULL_REQUEST" ]]; then
@@ -79,21 +133,13 @@ jobs:
                     -Dsonar.pullrequest.github.repository=${CIRCLE_PR_REPONAME} \
                     -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST}
                 else
-                   mvn ${BUILD_ARGS} ${SONAR_TARGETS} ${SONAR_ARGS}
+                   mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS}
                 fi
               fi
             else
               echo "Test only"
-              mvn ${BUILD_ARGS} -T 1C -Pui,bundle clean install
+              mvn ${BUILD_ARGS} -T 1C surefire:test
             fi
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
-      - save_cache:
-          paths:
-            - ~/usr/local/lib/node_modules
-          key: node-v4-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
       - run:
           name: Saving test results (H2)
           command: |
@@ -104,26 +150,13 @@ jobs:
           path: ~/junit
       - store_test_results:
           path: ~/junit
-      - run:
-          name: Saving checkstyle reports
-          command: |
-            mkdir -p ~/checkstyle/
-            find . -type f -regex ".*/target/checkstyle-result.xml" -exec cp {} ~/checkstyle \;
-          when: always
-      - store_artifacts:
-          path: ~/checkstyle
-      - persist_to_workspace:
-          root: orko-app
-          paths:
-            - target/orko-app.jar
-            - example-config.yml
 
   integration:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
         environment:
           MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -U -T 1C -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+          BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     working_directory: ~/orko
     steps:
       - run:
@@ -135,14 +168,20 @@ jobs:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v2-{{ .Branch }}-
             - maven-repo-v2-
+      - restore_cache:
+          keys:
+            - node-e2e-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
+            - node-e2e-v1-{{ .Branch }}-
+            - node-e2e-v1-
+      - attach_workspace:
+          at: /home/circleci
       - run:
           name: Build
-          command: |
-            mvn ${BUILD_ARGS} -Pui,e2etest clean post-integration-test \
-              -Dspotbugs.skip=true \
-              -Dcheckstyle.skip=true \
-              -Dskip.surefire.tests=true
-      - run:
+          command: mvn ${BUILD_ARGS} -Pe2etest failsafe:pre-integration-test failsafe:integration-test failsafe:post-integration-test
+      - save_cache:
+          paths:
+            - ~/usr/local/lib/node_modules
+          key: node-e2e-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}      - run:
           name: Saving test results (Integration)
           command: |
             mkdir -p ~/junit/integration
@@ -162,7 +201,7 @@ jobs:
       - image: circleci/openjdk:8-jdk
         environment:
           MAVEN_OPTS: -Xmx3200m
-          BUILD_ARGS: -B -U -T 1C -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
       - image: circleci/mysql:5.7
         environment:
           MYSQL_ROOT_PASSWORD: rootpw
@@ -177,6 +216,8 @@ jobs:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v2-{{ .Branch }}-
             - maven-repo-v2-
+      - attach_workspace:
+          at: /home/circleci
       - run:
           name: Waiting for MySQL to be ready
           command: |
@@ -190,12 +231,9 @@ jobs:
       - run:
           name: MySQL tests
           command: |
-            mvn ${BUILD_ARGS} -Pdbonly clean test \
+            mvn ${BUILD_ARGS} -Pdbonly surefire:test \
               -Dmorf.mysql.noadmin=true \
-              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test \
-              -Dspotbugs.skip=true \
-              -Dcheckstyle.skip=true \
-              -Dskip.failsafe.tests=true
+              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
       - run:
           name: Saving test results (MySQL)
           command: |
@@ -215,13 +253,14 @@ jobs:
           BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     working_directory: ~/orko
     steps:
-      - attach_workspace:
-          at: orko-app
+      - checkout
       - restore_cache:
           keys:
             - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
             - maven-repo-v2-{{ .Branch }}-
             - maven-repo-v2-
+      - attach_workspace:
+          at: /home/circleci
       - run:
           name: Release to Github (if tag and key available)
           command: |
