--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,8 +176,11 @@ jobs:
       - attach_workspace:
           at: /home/circleci
       - run:
-          name: Build
-          command: mvn ${BUILD_ARGS} -Pe2etest failsafe:pre-integration-test failsafe:integration-test failsafe:post-integration-test
+          name: Run integration tests
+          command: |
+            cd orko-end-to-end-testing
+            mvn ${BUILD_ARGS} -Pe2etest verify
+            cd ..
       - save_cache:
           paths:
             - ~/usr/local/lib/node_modules
