--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,9 +102,9 @@ jobs:
           at: /home/circleci
       - restore_cache:
           keys:
-            - maven-testing-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-testing-v1-{{ .Branch }}-
-            - maven-testing-v1-
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
       - run:
           name: Upgrade Maven
           command: |
@@ -142,7 +142,7 @@ jobs:
       - save_cache:
           paths:
             - ~/.m2
-          key: maven-testing-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
       - run:
           name: Saving test results (H2)
           command: |
