--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,86 @@
 version: 2
+
 notify:
   webhooks:
     - url: https://webhooks.gitter.im/e/d1538bdca20be1aa31d8
+
+workflows:
+  version: 2
+  all:
+    jobs:
+      - "Compile and build":
+          filters: # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /.*/
+      - "Unit tests (all)":
+          requires:
+            - "Compile and build"
+          filters: # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /.*/
+      - "Unit tests (MySQL)":
+          requires:
+            - "Compile and build"
+          filters: # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /.*/
+      - "End-to-end tests":
+          requires:
+            - "Compile and build"
+          filters: # required since `deploy` has tag filters AND requires `build`
+            tags:
+              only: /.*/
+      - "Deploy release":
+          requires:
+            - "Unit tests (all)"
+            - "Unit tests (MySQL)"
+            - "End-to-end tests"
+          filters:
+            tags:
+              only: /^.*\..*/
+            branches:
+              ignore: /.*/
+
 jobs:
-  build:
+  "Compile and build":
     docker:
-      - image: circleci/openjdk:8-jdk-browsers@sha256:40ae64c13a503125a452cb5ffb5c01d14742c01d3676d77aa276fc6b956168be
+      - image: circleci/openjdk:8-jdk
         environment:
           MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -U -Dskip.failsafe.tests=true -DskipTests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
     working_directory: ~/orko
     steps:
-      - run: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
-
       - checkout
-
       - restore_cache:
           keys:
-            - maven-repo-v2-{{ .Branch }}-{{ checksum "pom.xml" }}
-            - maven-repo-v2-{{ .Branch }}-
-            - maven-repo-v2-
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
       - restore_cache:
           keys:
-            - node-v4-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
-            - node-v4-{{ .Branch }}-
-            - node-v4-
-
+            - node-v5-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}
+            - node-v5-{{ .Branch }}-
+            - node-v5-
       - run:
-          command: |
-            echo "Branch: $CIRCLE_BRANCH"
-            echo "Project: $CIRCLE_REPOSITORY_URL"
-            echo " - Username: $CIRCLE_PROJECT_USERNAME"
-            echo " - Repository: $CIRCLE_PROJECT_REPONAME"
-            echo "Pull request: $CIRCLE_PULL_REQUEST"
-            echo " - Username: $CIRCLE_PR_USERNAME"
-            echo " - Repository: $CIRCLE_PR_REPONAME"
-            mvn -B -U -Pui,e2etest,bundle clean install -Dskip.failsafe.tests=true -Dskip.surefire.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -T 1C
-
+          name: Build
+          command: mvn ${BUILD_ARGS} -T 1C -Pui,bundle clean install
       - save_cache:
           paths:
             - ~/.m2
-          key: maven-repo-v1-{{ .Branch }}-{{ checksum "pom.xml" }}
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
       - save_cache:
           paths:
             - ~/usr/local/lib/node_modules
-          key: node-v4-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
-
+          key: node-v5-{{ .Branch }}-{{ checksum "orko-ui/package-lock.json" }}}
+      - run:
+          name: Remove unnecessary node artifacts before saving workspace
+          command: |
+            rm -rf orko-ui/node
+            rm -rf orko-ui/node_modules
+      - persist_to_workspace:
+          root: /home/circleci
+          paths:
+            - orko
       - run:
           name: Saving checkstyle reports
           command: |
@@ -54,20 +90,109 @@ jobs:
       - store_artifacts:
           path: ~/checkstyle
 
+  "Unit tests (all)":
+    docker:
+      - image: circleci/openjdk:8-jdk
+        environment:
+          MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+    working_directory: ~/orko
+    steps:
+      - attach_workspace:
+          at: /home/circleci
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - run:
+          name: Upgrade Maven
+          command: |
+            cd
+            wget http://apache.mirror.anlx.net/maven/maven-3/3.6.1/binaries/apache-maven-3.6.1-bin.tar.gz
+            tar xzvf apache-maven-3.6.1-bin.tar.gz
+            cd ~/orko
+      - run:
+          name: Tests (plus Sonar if possible)
+          command: |
+            if [[ -n "$SONARQUBE_TOKEN" ]]; then
+              echo "Build and Sonar"
+              export PATH=/home/circleci/apache-maven-3.6.1/bin:$PATH
+              export SONAR_TARGETS="-Pci org.jacoco:jacoco-maven-plugin:prepare-agent@default-prepare-agent surefire:test org.jacoco:jacoco-maven-plugin:report@default-report sonar:sonar"
+              export SONAR_ARGS="-Dsonar.host.url=https://sonarcloud.io \
+                  -Dsonar.organization=${CIRCLE_PROJECT_USERNAME} \
+                  -Dsonar.login=${SONARQUBE_TOKEN}"
+              if [[ -n "$CIRCLE_BRANCH" ]]; then
+                mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
+                  -Dsonar.branch.name=${CIRCLE_BRANCH}
+              else
+                if [[ -n "$CIRCLE_PULL_REQUEST" ]]; then
+                  mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS} \
+                    -Dsonar.pullrequest.provider=github \
+                    -Dsonar.pullrequest.github.repository=${CIRCLE_PR_REPONAME} \
+                    -Dsonar.pullrequest.key=${CIRCLE_PULL_REQUEST}
+                else
+                   mvn ${BUILD_ARGS} -T 1C ${SONAR_TARGETS} ${SONAR_ARGS}
+                fi
+              fi
+            else
+              echo "Test only"
+              mvn ${BUILD_ARGS} -T 1C surefire:test
+            fi
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
       - run:
           name: Saving test results (H2)
           command: |
             mkdir -p ~/junit/h2
             find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/h2 \;
           when: always
+      - store_artifacts:
+          path: ~/junit
+      - store_test_results:
+          path: ~/junit
 
+  "End-to-end tests":
+    docker:
+      - image: circleci/openjdk:8-jdk-browsers
+        environment:
+          MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+    working_directory: ~/orko
+    steps:
+      - run:
+          name: Install packages
+          command: sudo apt-get install xvfb libgtk2.0-0 libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2
+      - attach_workspace:
+          at: /home/circleci
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - restore_cache:
+          keys:
+            - node-e2e-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
+            - node-e2e-v1-{{ .Branch }}-
+            - node-e2e-v1-
+      - run:
+          name: Run integration tests
+          command: |
+            cd orko-end-to-end-testing
+            mvn ${BUILD_ARGS} -Pe2etest verify
+            cd ..
+      - save_cache:
+          paths:
+            - ~/usr/local/lib/node_modules
+          key: node-e2e-v1-{{ .Branch }}-{{ checksum "orko-end-to-end-testing/package-lock.json" }}
       - run:
           name: Saving test results (Integration)
           command: |
             mkdir -p ~/junit/integration
             find . -type f -regex ".*/target/mocha-reports/.*xml" -exec cp {} ~/junit/integration \;
           when: always
-
       - store_artifacts:
           path: ~/junit
       - store_test_results:
@@ -76,8 +201,82 @@ jobs:
           path: orko-end-to-end-testing/cypress/screenshots
       - store_artifacts:
           path: orko-end-to-end-testing/app.log
-workflows:
-  version: 2
-  all:
-    jobs:
-      - build
+
+  "Unit tests (MySQL)":
+    docker:
+      - image: circleci/openjdk:8-jdk
+        environment:
+          MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -Dskip.failsafe.tests=true -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+      - image: circleci/mysql:5.7
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: test
+          MYSQL_USER: open
+          MYSQL_PASSWORD: sesame
+    working_directory: ~/orko
+    steps:
+      - attach_workspace:
+          at: /home/circleci
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 30`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
+      - run:
+          name: MySQL tests
+          command: |
+            mvn ${BUILD_ARGS} -Pdbonly surefire:test \
+              -Dmorf.mysql.noadmin=true \
+              -Dtestdb.url=mysql://open:sesame@127.0.0.1/test
+      - run:
+          name: Saving test results (MySQL)
+          command: |
+            mkdir -p ~/junit/mysql
+            find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} ~/junit/mysql \;
+          when: always
+      - store_artifacts:
+          path: ~/junit
+      - store_test_results:
+          path: ~/junit
+
+  "Deploy release":
+    docker:
+      - image: circleci/openjdk:8-jdk
+        environment:
+          MAVEN_OPTS: -Xmx3200m
+          BUILD_ARGS: -B -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+    working_directory: ~/orko
+    steps:
+      - attach_workspace:
+          at: /home/circleci
+      - restore_cache:
+          keys:
+            - maven-repo-v3-{{ .Branch }}-{{ checksum "pom.xml" }}
+            - maven-repo-v3-{{ .Branch }}-
+            - maven-repo-v3-
+      - run:
+          name: Release to Github (if tag and key available)
+          command: |
+            if [[ -n "$GITHUB_API_KEY" ]]; then
+              if [[ -n "$CIRCLE_TAG" ]]; then
+                cd orko-app
+                mvn -B github-release:release \
+                  --settings ../etc/.maven-settings.xml \
+                  -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn
+              else
+                echo "Not a tag"
+              fi
+            else
+              echo "Github API key not set"
+            fi
